# hospital_management_system

./: CMakeLists.txt
include/: doctormodule.h  hospitalmanagement.h  patientmodule.h
src/: doctormodule.cpp  hospitalmanagement.cpp  main.cpp  patientmodule.cpp
